k3s-manifests/00-https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wu-s-force-https
  namespace: wu-s
spec:
  redirectScheme:
    scheme: https
    permanent: true
