k3s-manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wu-s
