k3s-manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wu-s
  namespace: wu-s
  labels:
    app: wu-s
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: wu-s
