k3s-manifests/06-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: wu-s
  namespace: wu-s
subsets:
  - addresses:
      - ip: 10.188.34.229
    ports:
      - port: 3006
